# github-actions-cache

./: .goreleaser.yaml  Cargo.toml  Cross.toml  action.yml  build.rs  flake.nix
.github/workflows/: release.yml  selftest.yml  test.yml
github/actions/results/api/v1/: artifact.proto  cache.proto
github/actions/results/entities/v1/: cachemetadata.proto  cachescope.proto
src/: lib.rs  main.rs
