[package]
name = "github-actions-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.4"
serde = { version = "1.0.217", features = ["derive"] }
twirp = { git = "https://github.com/github/twirp-rs", version = "0.7.0" }

[build-dependencies]
prost-build = "0.13.4"
twirp-build = { git = "https://github.com/github/twirp-rs", version = "0.7.0" }
