[package]
name = "github-actions-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
jwt = "0.16.0"
prost = "0.13.4"
reqwest = { version = "0.12.12", features = ["rustls-tls-webpki-roots"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
twirp = { git = "https://github.com/github/twirp-rs", version = "0.7.0" }

[build-dependencies]
prost-build = "0.13.4"
twirp-build = { version = "0.7.0", git = "https://github.com/NickCao/twirp-rs" }
