[package]
name = "github-actions-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
clap = { version = "4.5.36", features = ["env", "derive"] }
prost = "0.13.5"
prost-types = "0.13.5"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["rustls-tls-webpki-roots", "stream"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
twirp = { git = "https://github.com/github/twirp-rs" }

[build-dependencies]
prost-build = "0.13.5"
twirp-build = { git = "https://github.com/github/twirp-rs" }
